[package]
name = "isl_bindings_generator"
authors = ["Kaushik Kulkarni <kaushikcfd@gmail.com>"]
description = "Rust bindings generator for Integer Set Library"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { git = "https://github.com/aDifferentJT/clang-rs.git", features = ["clang_4_0"] }
codegen = "0.2.0"
hashbrown = "0.14.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
